# harmonium

./: .gitignore  agent.py  install_requirements.py  main.py  requirements.txt  sql_app.db  test.py
Agent/: langchain_agent.py
Agent/embeddings/: openai_agent_embedding.py
Routes/: bot.py  embedding_route.py
agent/: README.md  agent.py  pyproject.toml
agent/src/agent/: crew.py  main.py
agent/src/agent/tools/media/: DiscordBot.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: agent.py  auth.py  bot.py  embedding.py  users.py
app/core/: auth.py  config.py
app/crud/: crud_user.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  agent.py  bot.py  embedding.py  team.py  team_members.py  token.py  user.py
app/schemas/: agent.py  user.py
auth/: auth_bearer.py
models/: models.py
utils/: generate_string.py  get_embedding_text.py
