[tool.poetry]
name = "agent"
version = "0.1.0"
description = "agent using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.36.1" }
discord = "^2.3.2"

[tool.poetry.scripts]
agent = "agent.main:run"
train = "agent.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
